--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,25 +3,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="@dimen/main_padding"
-        tools:context=".MainActivity"
-        android:weightSum="1">
+        android:weightSum="1"
+        tools:context=".MainActivity">
 
         <EditText
             android:id="@+id/input"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/main_padding"
+            android:layout_weight="1"
             android:hint="@string/search_hint"
             android:inputType="text"
-            android:textColorHint="@color/book_search_hint"
             android:maxLines="1"
-            android:layout_weight="1" />
+            android:textColorHint="@color/book_search_hint" />
 
         <ImageButton
             android:id="@+id/search_button"
