--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,8 +1,6 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Default screen margins, per the Android Design guidelines. -->
-    <dimen name="activity_horizontal_margin">16dp</dimen>
-    <dimen name="activity_vertical_margin">16dp</dimen>
-    <dimen name="main_padding">10dp</dimen>
-    <dimen name="book_content_left_margin">8dp</dimen>
-    <dimen name="book_content_right_margin">8dp</dimen>
+    <dimen name="relative_layout_padding">16dp</dimen>
+    <dimen name="linear_layout_padding">5dp</dimen>
+    <dimen name="text_size">15sp</dimen>
 </resources>
